// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.header.v1;

import "teleport/header/v1/metadata.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/header/v1;headerv1";

// ResourceHeader is a shared resource header.
message ResourceHeader {
  // kind is a resource kind.
  string kind = 1;
  // sub_kind is an optional resource sub kind, used in some resources.
  string sub_kind = 2;
  // Version is the API version used to create the resource. It must be
  // specified. Based on this version, Teleport will apply different defaults on
  // resource creation or deletion. It must be an integer prefixed by "v".
  // For example: `v1`
  string version = 3;
  // metadata is resource metadata.
  Metadata metadata = 4;
}
